# digital_rain

./: Cargo.toml  LICENSE  README.md  doas  perf.data  perf.data.old
src/: main.rs  rain.rs  test.rs  ui.rs
