[package]
name = "digital_rain"
version = "0.1.0"
authors = ["JQ <nail.prophet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
ncurses = {version = "*", features=["wide"]}
rand = "*"




