[package]
name = "digital_rain"
version = "0.2.4"
authors = ["https://github.com/GhostOfMe/"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
ncurses = {version = "5.1", features=["wide"]}
rand = "0.8.3"
rand_distr = "0.4.3"
clap = "2.34.0"
css-color-parser = "0.1.2"


